{{$NEXT}}

0.15    2014-08-31

- Generate the Conflicts module as a FromCode file, so its content is not
  calculated until after prereqs are available: restores the -also section
  lost in version 0.09. Patch by Karen Etheridge. GitHub PR #2.

- The generated files now include comments indicating what version of this
  plugin was used to generate them.  Patch by Karen Etheridge. GitHub PR #1.


0.14    2014-04-06

- Same as 0.13001


0.13001 2014-04-06 (TRIAL RELEASE)

- Fixed the x_breaks metadata to properly indicate the problematic version
  range. Patch by Karen Etheridge. RT #94467.


0.13    2013-08-25

- MetaCPAN was picking up the "# ABSTRACT" line in the conflicts module
  template.

- Removed some incorrect docs left over from 0.11


0.12    2013-08-25

- Fix bad conflicts entries added to metaspec (Karen is very sorry!), broken
  in v0.11. Sort of resolves RT #87123.


0.11    2013-07-22

- This plugin now adds conflicts type entries to the distro's Meta
  information, per the CPAN meta spec. Patch by Karen Etheridge. RT #87123.


0.10    2013-06-07

- The x_conflicts key added to the META.* files has now been renamed to
  x_breaks, per the Lancaster Consensus of 2013
  (https://github.com/Perl-Toolchain-Gang/toolchain-site/blob/master/lancaster-consensus.md).

- The generated check_conflicts sub added to the Makefile.PL or Build.PL file
  now checks the AUTOMATED_TESTING and NONINTERACTIVE_TESTING env vars to
  determine whether or not it should sleep for a few seconds so its message
  can be read. These env vars also come from the Lancaster Consensus.


0.09    2013-03-31

- If the plugin is run before a Makefile.PL or Build.PL can be generated, a
  fatal error is thrown. RT#80271. (Karen Etheridge)

- The files this plugin generates are now added early enough to be seen by any
  FileMunger plugins. However, the PkgVersion plugin still skips the generated
  *::Conflicts module because the package name of the generated module is